# HarmoniQ

./: .cache.sqlite  .gitignore  README.md  buses.csv  coordonnes_MRC_clean.csv  fake_weather.epw  lignes.csv  requirements.txt
harmoniQ/: pyproject.toml
harmoniQ/harmoniq/: __init__.py
harmoniQ/harmoniq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
harmoniQ/harmoniq/core/: base.py  fausse_données.py  meteo.py  meteo_web_version.py
harmoniQ/harmoniq/db/: CRUD.py  __init__.py  demande.py  engine.py  schemas.py  shemas.py
harmoniQ/harmoniq/db/CSVs/: Info_Barrages.csv  Info_Barrages_Old.csv  Wind_Turbine_Database_FGP.xlsx  buses.csv  centrale_thermique.csv  centrales_solaires.csv  clean.py  line_types.csv  lines.csv  treatment.py
harmoniQ/harmoniq/hydro/: __init__.py  calcules.py
harmoniQ/harmoniq/interface/: __init__.py
harmoniQ/harmoniq/meteo/: meteo_data_refiner.py
harmoniQ/harmoniq/meteo/raw/: climate-hourly (1).csv  climate-hourly (10).csv  climate-hourly (11).csv  climate-hourly (12).csv  climate-hourly (13).csv  climate-hourly (14).csv  climate-hourly (15).csv  climate-hourly (16).csv  climate-hourly (17).csv  climate-hourly (18).csv  climate-hourly (19).csv  climate-hourly (2).csv  climate-hourly (20).csv  climate-hourly (21).csv  climate-hourly (22).csv  climate-hourly (23).csv  climate-hourly (24).csv  climate-hourly (25).csv  climate-hourly (26).csv  climate-hourly (27).csv  climate-hourly (28).csv  climate-hourly (29).csv  climate-hourly (3).csv  climate-hourly (4).csv  climate-hourly (5).csv  climate-hourly (6).csv  climate-hourly (7).csv  climate-hourly (8).csv  climate-hourly (9).csv  climate-hourly.csv
harmoniQ/harmoniq/modules/: __init__.py
harmoniQ/harmoniq/modules/eolienne/: __init__.py  calcule.py  eolienne_data.py  eolienne_data_import.py  eolienne_db.py  eolienne_get_data.py  eolienne_load_weather.py  eolienne_test.py  turbine_data.py  wind_turbine_models.py
harmoniQ/harmoniq/modules/hydro/: Debits.csv  __init__.py  calcule.py  calcules.py
harmoniQ/harmoniq/scripts/: init_database.py  lance_interface.py  lance_webserver.py  load_database.py
harmoniQ/harmoniq/webserver/: REST.py  __init__.py
harmoniQ/tests/: conftest.py  test_app.py  test_core.py  test_init_db.py  test_installation.py  test_meteo.py  test_sanity_check.py
(+219 files in other folders)
