[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmoniq"
version = "0.1.0"
description = "Librarie pour l'analyse de production d'énergie de Hydro-Québec"
requires-python = ">=3.8"
authors = [
    {name = "Sébastien Dasys", email = "sebastien.dasys@polymtl.ca"},
    {name = "Alec Mitchell", email = "alec.mitchell@polymtl.ca"},
    # Ajoute ton nom si tu contribues au code
]
dependencies = [
    # Général
    "numpy",
    "pandas",
    # Web app dependencies
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    # Ajoute les dépendances nécessaires au fur et à mesure
    "nrel-pysam",
    "windpowerlib",
    "geopandas",
]

[project.scripts]
load-db = "harmoniq.scripts.load_database:main"
launch-app = "harmoniq.scripts.lance_webserver:main"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
    "httpx",
    "Office365-REST-Python-Client"
]

[tool.setuptools]
packages = ["harmoniq"]

[tool.setuptools_scm]
write_to = "harmoniq/_version.py"
fallback_version = "0.1.0"
version_scheme = "post-release"
local_scheme = "node-and-date"
