[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmoniq"
version = "0.1.0"
description = "HarmoniQ Project"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.7"
dependencies = [
    "pvlib",
    "pandas",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=3.9",
] 